# vibe-coding

./: README.md  package.json
.github/workflows/: release.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/commands/: subscriptions.rs
src/components/: ClipReader.tsx  SubscriptionLayout.tsx
