[package]
name = "vibe-coding"
version = "0.1.2"
description = "Local-first AI information manager."
authors = ["vibe-coding contributors"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.1", features = ["protocol-asset", "macos-private-api"] }
tauri-plugin-log = "2"
rusqlite = { version = "0.31", features = ["bundled"] }
jieba-rs = "0.7"
once_cell = "1"
window-vibrancy = "0.7.1"
uuid = { version = "1", features = ["v4"] }
tauri-plugin-opener = "2.5.4"
reqwest = { version = "0.12", default-features = false, features = ["native-tls", "charset"] }
scraper = "0.22"
feed-rs = "2"
trash = "5.2.3"
tauri-plugin-mcp-bridge = "0.2"
tokio = { version = "1", features = ["sync", "time"] }
